# base-monorepo

./: .gitignore  BUILD  README.md  WORKSPACE  deps.bzl  go.mod  go.sum
docker/grpc_helloworld/: docker-compose.yml
examples/grpc_helloworld/greeter_client/: BUILD.bazel  main.go
examples/grpc_helloworld/greeter_server/: BUILD.bazel  main.go
examples/grpc_helloworld/helloworld/: BUILD.bazel  helloworld.proto
examples/hello_world/: BUILD.bazel  hello_test.go  main.go
examples/py_hello_world/: BUILD  main.py
