load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "hello_world_lib",
    srcs = ["main.go"],
    importpath = "dev/examples/hello_world",
    visibility = ["//visibility:private"],
    deps = ["@io_rsc_quote//:quote"],
)

go_binary(
    name = "hello_world",
    embed = [":hello_world_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "hello_world_test",
    srcs = ["hello_test.go"],
    embed = [":hello_world_lib"],
)
